Added dashboard analytics for admin and users - Closes #17
