# project-management-frontend/src/@api/apis/admin-controller-api.ts
@@ -1,0 +1,90 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Project Management Tool API
+ * API documentation for Project Management Tool
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  AdminAnalyticsDto,
+} from '../models/index';
+import {
+    AdminAnalyticsDtoFromJSON,
+    AdminAnalyticsDtoToJSON,
+} from '../models/index';
+
+export interface GetAnalyticsSummaryRequest {
+    companyId: number;
+    dateFrom?: string;
+    dateTo?: string;
+}
+
+/**
+ * 
+ */
+export class AdminControllerApi extends runtime.BaseAPI {
+
+    /**
+     */
+    async getAnalyticsSummaryRaw(requestParameters: GetAnalyticsSummaryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<AdminAnalyticsDto>> {
+        if (requestParameters['companyId'] == null) {
+            throw new runtime.RequiredError(
+                'companyId',
+                'Required parameter "companyId" was null or undefined when calling getAnalyticsSummary().'
+            );
+        }
+
+        const queryParameters: any = {};
+
+        if (requestParameters['companyId'] != null) {
+            queryParameters['companyId'] = requestParameters['companyId'];
+        }
+
+        if (requestParameters['dateFrom'] != null) {
+            queryParameters['dateFrom'] = requestParameters['dateFrom'];
+        }
+
+        if (requestParameters['dateTo'] != null) {
+            queryParameters['dateTo'] = requestParameters['dateTo'];
+        }
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+
+        let urlPath = `/api/admin/analytics/summary`;
+
+        const response = await this.request({
+            path: urlPath,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => AdminAnalyticsDtoFromJSON(jsonValue));
+    }
+
+    /**
+     */
+    async getAnalyticsSummary(requestParameters: GetAnalyticsSummaryRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<AdminAnalyticsDto> {
+        const response = await this.getAnalyticsSummaryRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
