# project-management-frontend/src/@api/models/index.ts
@@ -1,5 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
+export * from './admin-analytics-dto';
 export * from './admin-dto';
 export * from './auth-response-dto';
 export * from './invite-request';
@@ -9,4 +10,5 @@ export * from './register-company-request-dto';
 export * from './register-request-dto';
 export * from './task-dto';
 export * from './team-dto';
+export * from './user-analytics-dto';
 export * from './user-dto';
